--- a/lab01/exercise01/style.css
+++ b/lab01/exercise01/style.css
@@ -1,11 +1,23 @@
 body * {
     box-sizing: border-box;
+    
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    color: black;
 }
+
 
 /*
 Add some style blocks below this line to style the card.
 */
+section {
+    box-sizing: border-box;
+    border: solid 1px rgb(243, 1, 1); 
+    width: 50vh;
+    height: 50vh;   
+    padding: 10px;
+    margin: 10px;
+    background: rgb(32, 169, 173)
+}
